升级UAP-SDK 去掉无用的文件