@@ -12,11 +12,11 @@
 	<parent>
 		<artifactId>dili-parent</artifactId>
 		<groupId>com.dili</groupId>
-		<version>3.6.5-SNAPSHOT</version>
+		<version>3.6.6-SNAPSHOT</version>
 	</parent>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>13</java.version>
+		<java.version>1.8</java.version>
 		<templateRootDir>${basedir}/mbg-templates/</templateRootDir>
 		<!--  XML生成路径  -->
 		<targetResourcesProject>${basedir}/src/main/resources</targetResourcesProject>
@@ -68,18 +68,18 @@
 				<version>3.8.1</version>
 				<!-- 编译JDK版本 -->
 				<configuration>
-					<source>13</source>
-					<target>13</target>
+					<source>1.8</source>
+					<target>1.8</target>
 					<encoding>UTF-8</encoding>
 					<parameters>true</parameters>
 <!--					<compilerArgument>-proc:none</compilerArgument>-->
-					<compilerArgs>
-						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
-						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-					</compilerArgs>
+<!--					<compilerArgs>-->
+<!--						<arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>-->
+<!--						<arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>-->
+<!--						<arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>-->
+<!--						<arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>-->
+<!--						<arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>-->
+<!--					</compilerArgs>-->
 				</configuration>
 			</plugin>
 			<plugin>
@@ -135,7 +135,7 @@
 		<dependency>
 			<groupId>com.dili</groupId>
 			<artifactId>uap-sdk</artifactId>
-			<version>2.6.1-SNAPSHOT</version>
+			<version>2.8.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.dili</groupId>
@@ -152,7 +152,7 @@
 		<dependency>
 			<groupId>com.dili</groupId>
 			<artifactId>commons</artifactId>
-			<version>1.1.0-SNAPSHOT</version>
+			<version>1.2.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
